Crash in [@ mozilla::Maybe<T>::emplace<T> | nsGlobalWindowOuter::FullscreenWillChange]
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr102 | --- | unaffected |
| firefox108 | --- | unaffected |
| firefox109 | --- | unaffected |
| firefox110 | --- | fixed |
People
(Reporter: kevin, Assigned: edgar)
References
(Regression, )
Details
(Keywords: regression)
Crash Data
Attachments
(2 files)
With Firefox Nightly build 20221223043251 on Debian testing with Sway 1.7 and full-screen-api.ignore-widgets = true, Firefox crashes when the Firefox window is fullscreened and a video is playing in fullscreen mode. Steps to reproduce:
- Launch Firefox in a fresh profile.
- Set
full-screen-api.ignore-widgets=truein about:config - Visit a page with HTML5 video (e.g. https://youtu.be/7ppAQDgRimo)
- Fullscreen the video and begin playback. (e.g. by pressing the fullscreen video button in the YouTube player)
- Fullscreen the Firefox window from the window manager. (e.g. press Win+F in Sway)
Pushlog https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=2ace02ead00196c032cc960d1a68a8ce6fd215f3&tochange=903719ec824e3c1a40ba463b5fa06f15005b33b7 suggests that this was regressed by Bug 1801391.
Crash report: https://crash-stats.mozilla.org/report/index/670eddd5-9822-415f-8b35-74a560221223
MOZ_CRASH Reason: MOZ_RELEASE_ASSERT(!isSome())
Top 10 frames of crashing thread:
0 libxul.so mozilla::Maybe<FullscreenReason>::emplace<FullscreenReason> mfbt/Maybe.h:844
0 libxul.so nsGlobalWindowOuter::FullscreenWillChange dom/base/nsGlobalWindowOuter.cpp:4544
1 libxul.so mozilla::AppWindow::FullscreenWillChange xpfe/appshell/AppWindow.cpp:2942
2 libxul.so mozilla::AppWindow::WidgetListenerDelegate::FullscreenWillChange xpfe/appshell/AppWindow.cpp:3433
3 libxul.so nsWindow::OnWindowStateEvent widget/gtk/nsWindow.cpp:5234
3 libxul.so window_state_event_cb widget/gtk/nsWindow.cpp:8231
4 libgtk-3.so.0 _gtk_marshal_BOOLEAN__BOXED debian/build/deb/gtk/gtkmarshalers.c:84
5 libgobject-2.0.so.0 g_closure_invoke gobject/gclosure.c:832
6 libgobject-2.0.so.0 signal_emit_unlocked_R gobject/gsignal.c:3796
7 libgobject-2.0.so.0 g_signal_emit_valist gobject/gsignal.c:3559
| Reporter | ||
Updated•2 years ago
|
Comment 1•2 years ago
|
||
:edgar, since you are the author of the regressor, bug 1801391, could you take a look? Also, could you set the severity field?
For more information, please visit auto_nag documentation.
Comment 2•2 years ago
|
||
The bug has a crash signature, thus the bug will be considered confirmed.
Comment 3•2 years ago
|
||
The bug has a crash signature, thus the bug will be considered confirmed.
Comment 4•2 years ago
|
||
Set release status flags based on info from the regressing bug 1801391
| Assignee | ||
Updated•2 years ago
|
| Assignee | ||
Comment 5•2 years ago
|
||
To hit the assertion, it requires user to switch full-screen-api.ignore-widgets to true manually in about:config.
| Assignee | ||
Comment 6•2 years ago
|
||
| Assignee | ||
Comment 7•2 years ago
|
||
Depends on D165907
Comment 9•2 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/a43025228f8c
https://hg.mozilla.org/mozilla-central/rev/f58e5f3c02c7
Updated•2 years ago
|
I could not reproduce the crash on a 2022-12-23 Nightly build on Ubuntu 22.
Would you be so kind as to verify the fix on beta/latest Nightly ?
| Reporter | ||
Comment 11•2 years ago
|
||
I can verify that the issue is fixed for me: I'm unable to reproduce the issue on beta 110.0b9 or the latest Nightly (build 20230206213623), while I am still able to reproduce the issue with the old build 20221223212957 (to confirm that the fix was not due to a change on my test system).
| Reporter | ||
Updated•2 years ago
|
Description
•