Bug 1807252 - Convert full-screen-api.ignore-widgets to static pref; r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D165907