dom/base/nsGlobalWindowOuter.cpp
@@ -111,6 +111,7 @@
 #include "mozilla/PresShell.h"
 #include "mozilla/ProcessHangMonitor.h"
 #include "mozilla/StaticPrefs_dom.h"
+#include "mozilla/StaticPrefs_full_screen_api.h"
 #include "mozilla/StaticPrefs_print.h"
 #include "mozilla/StaticPrefs_fission.h"
 #include "mozilla/ThrottledEventQueue.h"
@@ -4367,7 +4368,7 @@ nsresult nsGlobalWindowOuter::ProcessWidgetFullscreenRequest(
   //   content to fill the entire client area of the emulator window.
   // - in FxR Desktop, we don't want fullscreen to take over the monitor, but
   //   instead we want fullscreen to fill the FxR window in the the headset.
-  if (!Preferences::GetBool("full-screen-api.ignore-widgets", false) &&
+  if (!StaticPrefs::full_screen_api_ignore_widgets() &&
       !mForceFullScreenInWidget) {
     if (MakeWidgetFullscreen(this, aReason, aFullscreen)) {
       // The rest of code for switching fullscreen is in nsGlobalWindowOuter::
